* V1.11.4.1
  * fixed repo update
  * added backwards compatibility for the search via ElasticSearch

* V1.11.4
  * fixed problem when ck-python.cfg contains non-existent python
  * fixed problem with allowed action_names 
    (should not start with number but can have numbers in the middle)
  * fixed problem with ElasticSearch when renaming entries
  * Added key "use_git_instead_of_https" to kernel cfg 
    to substitute https:// with git@ in repositories
  * fixed problem with pip installation using Python 2.7
    (thanks to Alex Redshaw from Arm)
  * added possibility to log all used CK entries to find out all dependencies

    turn on: ck set kernel --var.log_ck_entries={file}
    turn off: ck set kernel --var.log_ck_entries=""

* V1.11.3
  * minor clean up of the API doc
  * now copying default repo to $HOME/.ck/{version} to be able to always find it
  * added possibility to split dirs for the whole repo 
    (to be able to exchange repos with split directories)
  * added commands "private", "recache", "split_all_dirs" to ck add/update repo
  * added try/catch around encode/decode routines to better support non-UTF locale
  * can use wildcards when searching for UIDs
  * added repo_module_uoa to be able to execute module from a specific repository

* V1.11.2
  * fixed typo
  * added possibility to force index data for specific repos via local kernel meta:
    "index_repos":[list of repo UIDs and aliases]
  * bug fix for split directories if UID is used for an entry with alias
  * fixed link to CK slack channel
  * added zip_safe=False

* V1.11.1
  * fixed ck.bat on Windows (if CK_ROOT has spaces)
  * added possibility to add sub-directory for all entries of a given module based on first N characters of an entry name;
    this is needed to handle millions of entries;
    it can be configured via local kernel meta: "split_dirs":{"module UOA":N} 
  * improved "ck help" function
  * added support for the latest ElasticSearch via Python client